@@ -1,0 +1,14 @@
+project=j2me_reversi
+wtk_home=/usr/local/java/WTK104
+retroguard_home=/usr/local/java/retroguard-v1.1
+microemulator_home=/usr/local/java/microemulator
+device=DefaultColorPhone
+javadoc.packagenames=reversi.*,minimax.*,util.*
+main=reversi.J2MEReversi
+
+tmpclasses=tmpclasses
+classes=classes
+src=.
+jars=bin
+apidir=docs/api
+resources=res
