@@ -28,7 +28,7 @@ better in the C version, maybe I'll enhance it later.
 
 <h2>Screenshots</h2>
 
-The obligatory screenshot can be found <a href="screenshots.html">here</a>.
+The obligatory screenshots can be found <a href="screenshots.html">here</a>.
 
 <h2>Download</h2>
 
@@ -61,15 +61,30 @@ If you really want to compile, you'll need the followings:
 <ul>
 <li>Java 2 JDK (tested with IBM's Java 2 JDK 1.3 for Linux)</li>
 <li>J2ME wireless toolkit (tested with version 1.0.4)</li>
+<li>Jakarta-Ant (tested with version 1.4.1)</li>
+
 </ul>
 
 <ol>
-<li>Go to the bin directory</li>
-<li>Change the path of JAVA_HOME and WTK_HOME.</li>
-<li>./build.sh (Windows users have to use build.bat instead of build.sh)</li>
+<li>Change the path of WTK_HOME in .ant.properties file.</li>
+<li><code>ant jar</code></li>
 <li>Change the jar file size in the jad file (j2me_reversi.jad) [This
 is not necessary for me, but the program may not work without this]</li>
 </ol>
+
+<h3>How to compile with obfuscator?</h3>
+
+If you use obfuscator, the size of the jar file will be smaller. Currently
+the build process can use only one obfuscator: RetroGuard-1.1
+
+<ol>
+<li>Change the path of RETROGUARD_HOME in .ant.properties file.</li>
+<li><code>ant compactjar</code></li>
+<li>Change the jar file size in the jad file (j2me_reversi.jad) [This
+is not necessary for me, but the program may not work without this]</li>
+</ol>
+
+NOTE: RetroGuard-1.1 is not working for me with J2SDK 1.4.1 for Linux
 
 <h2>How to run?</h2>
 
@@ -87,6 +102,29 @@ If you want to try the program, you'll need:
 
 Since I have no MIDP/CLDC device, I don't know how to use the program on
 such a device. If you have one, please test it, and inform me.
+
+<h3>How to run with Ant?</h3>
+
+If you have ant installed you can run the program using ant, instead of
+the run.sh (run.bat) scripts.
+
+<ol>
+<li>Change the path of WTK_HOME in .ant.properties file.</li>
+<li><code>ant run</code></li>
+</ol>
+
+<h3>Using microemulator</h3>
+
+With Ant you are also able to test the program with
+<a href="http://microemulator.sourceforge.net">microemulator</a>:
+
+<ol>
+<li>Change the path of MICROEMULATOR_HOME in .ant.properties file.</li>
+<li><code>ant microrun</code></li>
+</ol>
+
+Note: There is a color bug in microemulator 0.3.0, please use newer 
+(e.g. CVS) version.
 
 <h2>Licensing</h2>
 
