@@ -1,0 +1,1 @@
+.class reversi/J2MEReversi public method
