@@ -2,6 +2,8 @@
 
 -Two Player Mode
 -Level Change during game
+-Icon
+-Using Ant build tool
 
 0.62.00 2002-SEP-28
 
